# gpt-copy

./: .gitignore  .pre-commit-config.yaml  codecov.yml  concatenate_files.py  pyproject.toml  readme.md  shell.nix
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  test.yml
src/concatenate_files/: concatenate_files.py
src/gpt_copy/: filter.py  gpt_copy.py  tokens.py
tests/: test_binary_detection.py  test_concatenate_files.py  test_exclusion_patterns.py  test_file_filtering.py  test_filter_spec.py  test_git_tracked.py  test_line_numbers_default.py  test_manual_gitignore.py  test_new_filter_spec.py  test_simple_exclusion.py  test_subfolder_execution.py  test_tokens_cli_integration.py  test_tokens_functionality.py  test_tree_compression.py  test_tree_only.py  test_unmatched_patterns.py  test_user_issue_exclusion.py  test_version_option.py
