[project]
name = "gpt_copy"
version = "2.4.0"
description = "A script to concatenate files into a single structured stream."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Simone Viozzi", email = "simone.viozzi@gmail.com" }
]

dependencies = [
    "click",
    "pathspec",
    "tqdm",
    "pygit2",
    "tiktoken"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit"
]

[tool]
uv.package = true

[project.scripts]
gpt-copy = "gpt_copy.gpt_copy:main"
tokens = "gpt_copy.tokens:main"
