[project]
name = "gpt_copy"
version = "2.5.0"
description = "A script to concatenate files into a single structured stream."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Simone Viozzi", email = "simoneviozzi97@gmail.com" }
]

dependencies = [
    "click",
    "pathspec",
    "tqdm",
    "pygit2",
    "tiktoken"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit"
]

[tool]
uv.package = true

[project.scripts]
gpt-copy = "gpt_copy.gpt_copy:main"
tokens = "gpt_copy.tokens:main"
